--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'joda-time:joda-time:2.10.1'
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.8'
+    implementation 'com.android.support:multidex:1.0.3'
 }
